--- a/index.html
+++ b/index.html
@@ -1,71 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>無題ドキュメント</title>
-<link rel="stylesheet" href="stylesheet.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>プロゲート上級編模写</title>
+<link rel="stylesheet" href="css/stylesheet.css">
+<link rel="stylesheet" href="css/responsive.css">
+<meta name="discription" content="プロゲート上級編を練習しています。あああああああああああああああああああああああああああ">
 </head>
 
 <body>
-
-<div class="header">
-<div class="header-logo">Progate</div>
-<div class="header-list">
-	<ul>
-	 <li>初心者でもOK！</li>
-	 <li>初期費用が無料！</li>
-	 <li>お問い合わせ</li>
-	</ul>	
-	</div>
-</div>	
-
-<div class="main">
 	
-<div class="copy-container">
-<h1>Hallo World<span>.</span></h1>
-<h2>プログラミングの正解へようこそ</h2>
-</div>
-<div class="contents">
-<h3 class="section-title">学べるレッスン</h3>
-　　<div class="contents-item">
-	<img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg" alt="画像仮">
-	  <p>HTML&CSS</p>
-	</div>
-　　<div class="contents-item">
-	<img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg" alt="画像仮">
-	  <p>PHP</p>
-	</div>
-　　<div class="contents-item">
-	<img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg" alt="画像仮">
-	  <p>Rudy</p>
-	</div>
-	<div class="contents-item">
-		<img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg" alt="画像仮">
-	  <p>Swift</p>
-	</div>
+<header>
+   <div class="container">
+     <div class="header-left">
+      <img class="logo" src="file:///C:/Users/MAI/Desktop/progate/%E4%B8%AD%E7%B4%9A%E7%B7%A8/images/main_logo.png" alt="">
+     </div>
+	   <a href="#" class="menu-icon"><span class="fa fa-bars"></span></a>
+	   
+	 <div class="header-right">
+          <a href="#">レッスン</a>
+          <a href="#">新規登録</a>
+          <a href="#" class="login">ログイン</a>
+        </div>
+   </div>
+</header>
+	
+	
+<div class="top-wrapper">
+    <div class="container">
+		<h1>LEARN TO CODE.</h1>
+        <h1>LEARN TO BE CREATIVE.</h1>
+        <p>Progateはオンラインプログラミング学習サービスです。</p>
+        <p>初心者にもやさしいスライドとレッスンで、Webサービスを作りながらプログラミングを学んでいきましょう。</p>
+    <div class="btn-wrapper">
+          <a href="#" class="btn signup">新規登録はこちら</a>
+          <p>or sign up with</p>
+          <a href="#" class="btn facebook">Facebookで登録</a>
+          <a href="#" class="btn twitter">Twitterで登録</a>
+        </div>
 
+    </div>
 </div>
 	
-<div class="contact-form"></div>	
-<h3 class="section-title">お問い合わせ</h3>
-<p>メールアドレス（必須）</p>
-<input>
-<p>お問い合わせ内容（必須）</p>
-<textarea></textarea>
-<p>※必須項目は必ずご入力ください。</p>
-<input class="contact-submit" type="submit" value="送信">
-</div>	
-
-<div class="footer">
-<div class="footer-logo">Progate</div>
-<div class="footer-list">
-	<ul>
-	<li>会社概要</li>
-	<li>採用情報</li>
-	<li>お問い合わせ</li>
-	</ul>
+<div class="lesson-wrapper">
+     <div class="container">
+        <div class="heading">
+          <h2>Learn Where to Get Started!</h2>
+        </div>
+        <div class="lessons">
+			
+		    <div class="lesson">
+              <div class="lesson-icon">
+              <img src="file:///C:/Users/MAI/Desktop/progate/%E4%B8%AD%E7%B4%9A%E7%B7%A8/images/lesson-wrapper.png" alt="">
+              <p>HTML & CSS</p>
+             </div>
+             <p class="txt-contents">Webページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+			</div>
+		    <div class="lesson">
+              <div class="lesson-icon">
+              <img src="file:///C:/Users/MAI/Desktop/progate/%E4%B8%AD%E7%B4%9A%E7%B7%A8/images/lesson-wrapper.png" alt="">
+              <p>jQuery</p>
+             </div>
+             <p class="txt-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+			</div>
+		    <div class="lesson">
+              <div class="lesson-icon">
+              <img src="file:///C:/Users/MAI/Desktop/progate/%E4%B8%AD%E7%B4%9A%E7%B7%A8/images/lesson-wrapper.png" alt="">
+              <p>Ruby</p>
+             </div>
+             <p class="txt-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+			</div>
+		    <div class="lesson">
+              <div class="lesson-icon">
+              <img src="file:///C:/Users/MAI/Desktop/progate/%E4%B8%AD%E7%B4%9A%E7%B7%A8/images/lesson-wrapper.png" alt="">
+              <p>PHP</p>
+             </div>
+             <p class="txt-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+			</div>
+			<div class="clear"></div>
+		 </div>
+     </div>
 	</div>
+	
+	
+<div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
+          <h3>Let's learn to code, learn to be creative!</h3>
+       </div>
+        <span class="btn message">さっそく開発する</span>
+      </div>
 </div>
+	
+<footer>
+  <div class="container">
+        <img src="https://prog-8.com/images/html/advanced/footer_logo.png" alt="">
+        <p>Learn to Code, Learn to be Creative.</p>
+  </div>
+</footer>
 	
 </body>
 </html>
